<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="elsuper.david.com.fragmentos.RegisterActivity">

    <EditText
        android:id="@+id/reg_etUser"
        android:hint="@string/main_hintUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/reg_etPassword"
        android:hint="@string/main_hintPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/reg_btnRegister"
        android:text="@string/reg_btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>