<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="elsuper.david.com.fragmentos.MainActivity">

    <ProgressBar
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/main_pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/main_etUsername"
        android:hint="@string/main_hintUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/main_etPassword"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/main_etUsername"
        android:hint="@string/main_hintPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/main_btnRegister"
            android:hint="@string/main_btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/main_btnLogin"
            android:id="@+id/main_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
