<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elsuper.david.com.fragmentos.DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:id="@+id/detail_txtLastSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/detail_btnSession"
                android:text="@string/detail_btnSession"
                android:layout_weight=".65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight=".35"
                android:layout_margin="12dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/detail_txtTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/detail_btnFragmentA"
            android:layout_weight="1"
            android:id="@+id/detail_btnFragmentA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/detail_btnFragmentB"
            android:layout_weight="1"
            android:id="@+id/detail_btnFragmentB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_weight="1"
            android:id="@+id/detail_flFragmentFolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
